@@ -1,4 +1,8 @@
 ---
+* [Sec 3388] NTP-01-014: Buffer Overflow in DPTS Clock
+  (Pentest report 01.2017) <perlinger@ntp.org>
+
+---
 (4.2.8p9-win) 2017/02/01 Released by Harlan Stenn <stenn@ntp.org>
 
 * [Bug 3144] NTP does not build without openSSL. <perlinger@ntp.org>
